# linuxdo-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
linuxdo_cli/: README.md  __init__.py  _credentials.py  auth.py  client.py  config.py  config_repository.py  main.py  models.py  pyproject.toml  settings.py
linuxdo_cli/services/: auth.py  detail.py
linuxdo_cli/tui/: __init__.py  app.py  app.tcss  messages.py  state.py  theme.py
linuxdo_cli/tui/screens/: __init__.py  browse.py  category_select.py  detail.py  help.py
linuxdo_cli/tui/widgets/: __init__.py  category_tabs.py  post_view.py  status_bar.py  topic_item.py  topic_list.py
linuxdo_cli/utils/: converter.py
src/: .gitignore
src/linuxdo_cli/: client.py  connect_client.py  main.py  models.py
src/linuxdo_cli/services/: __init__.py  topics.py
src/linuxdo_cli/tui/: __init__.py  app.py  app.tcss  state.py  theme.py
src/linuxdo_cli/tui/screens/: help.py  theme_select.py
src/linuxdo_cli/tui/widgets/: posts_container.py
src/linuxdo_cli/utils/: converter.py
tests/: conftest.py  test_architecture.py  test_auth_service.py  test_client.py  test_config_repository.py  test_connect_client.py  test_main.py  test_services.py  test_tui_e2e.py
