[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "linuxdo-cli"
version = "0.1.0"
description = "LINUX DO 社区命令行 TUI 工具"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "linuxdo-cli contributors" }]
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9",
    "rich>=13.0",
    "httpx>=0.27",
    "curl-cffi>=0.7",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "markdownify>=0.11",
    "textual>=0.70",
]

[project.urls]
Homepage = "https://github.com/Sayhi-bzb/linuxdo-cli"
Repository = "https://github.com/Sayhi-bzb/linuxdo-cli"

[project.scripts]
linuxdo = "linuxdo_cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
